Fix: Scrolling on mobile when view-port width < 768px

--- a/resources/stylesheets/main.css
+++ b/resources/stylesheets/main.css
@@ -54,6 +54,6 @@ a.discreet {
     text-decoration: none;
 }
 
-.gallery > * > * > * > img {
+.thumb {
     max-width: 90%;
 }
